# Sand

./: .gitignore  CMakeLists.txt  CMakeSettings.json  program1.sand
DeepQuant/: .gitignore  bsm_explorer.py  data_preprocess_test.py  organize_transactions.py  quant_test.py  section_crawler.py  trans_admin_test.py
DeepQuant/src/: bigshitmarketdataloader.py  bigshitmarketdownloader.py
DeepQuant/src/assistants/: transaction_reasons.py  transaction_records.py
DeepQuant/src/quant/: strategy_evaluator.py
QuantFirst/: classical_forecaster.py  main.py  prophet_integration.py  series_analyzer.py
QuantFirst/datasets/: 0700history.csv  eve300014.csv
QuantFirst/defender/: TradeDataframeAccessor.py  defender_main.py
QuantFirst/defender/signal_hunters/: MA20Hunter.py  SignalHunter.py
QuantFirst/insurance/: simple_test.py
ReinforcementLearner/new_gen/: DeepQNetwork.py  DoubleDQN.py  gym_demo1.py  gym_mountain_car.py  gym_pendulum.py  solu_demo.py
ReinforcementLearner/new_gen/a3c/: a3c.py
ReinforcementLearner/new_gen/actor_critic/: ActorCritic.py  ActorCriticRef.py  ac_cartpole.py
ReinforcementLearner/new_gen/ddpg/: ddpg.py  ddpg_test.py
ReinforcementLearner/new_gen/dualing_dqn/: DuelingDQN.py  run_pendulum.py
ReinforcementLearner/new_gen/policy_gradient/: run_cart_pole.py  (+3 more)
ReinforcementLearner/old_man/: RL_brain.py  solu_demo.py
include/: SandGlobalDefines.h
include/sand/: Lexer.h  SandGlobalDefines.h
include/token/: Token.h  TokenError.h
src/: Token.cpp  Token.h  TokenError.cpp  main.cpp
src/sand/: Lexer.cpp
src/token/: Token.cpp  TokenError.cpp
(+44 files in other folders)
